fix-overflow

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,10 +4,16 @@ $tag-color:#9343E4;
 $panel-shadow:1px 0px 5px 0px black;
 $section-header-size:2em;
 $illustration-background:rgba(110, 0, 220, .16);
+html{
+    max-width: 100%;
+    overflow-x: hidden;
+}
 
 body{
     margin: 0;
-    padding:0;   
+    padding:0;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 ul{
     margin: 0;
